--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,178 +1,171 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-dark " id="nav">
+  <div class="container">
+    <a class="navbar-brand" href="#">Hazel Orlendo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#top">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#work">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 
-			<nav id="nav">
-				<ul class="container">
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
+</nav>
 
-		<!-- Home -->
-			<article id="top" class="wrapper style1">
-				<div class="container">
-					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
-						</div>
-						<div class="col-8 col-7-large col-12-medium">
-							<header>
-								<h1>I am <strong>Hazel Orlendo</strong>.</h1>
-							</header>
-              <p>A FRONT-END DEVELOPER</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
-						</div>
-					</div>
-				</div>
-			</article>
+<!-- Home -->
+<article id="top" class="wrapper style1">
+  <div class="container">
+    <div class="row ">
+      <div class="col-4 col-5-large col-12-medium">
+        <span class="image fit">
+          <!-- <img src="../../assets/images/hazel.jpg" class="rounded float-left" alt="..."> -->
+          <img src="../../assets/images/hazel.jpg" alt="hazel image" />
+        </span>
+      </div>
+      <div class="col-8 col-7-large col-12-medium align-items-center">
+        <h2 class="text-white">Hello,</h2>
+        <header>
+          <h1 class="text-white">I am <strong class="text-white">Hazel Orlendo</strong>.</h1>
+        </header>
+        <h2 class="text-white">A FRONT-END DEVELOPER</h2>
+        <br>
+        <h3 class="text-white">I code and design beautiful website.</h3>
+        <a href="#contact" class="btn btn-primary scrolly">Hire me</a>
+      </div>
+    </div>
+  </div>
+</article>
 
-		<!-- Work -->
-			<article id="work" class="wrapper style2">
-				<div class="container">
-					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
-					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
-				</div>
-			</article>
+<!-- Work -->
+<article id="work" class="wrapper style2">
+  <div class="container">
+    <header>
+      <h2>My skills.</h2>
+      <p>_What I offer_</p>
+    </header>
+    <div class="row aln-center">
+      <div class="col-4 col-6-medium col-12-small">
+        <section class="box style1">
+          <img src="https://img.icons8.com/ios/50/000000/code.png"/>
+          <h3>Front-end developer</h3>
+          <p>I like writing code from scratch and bringing and idea into life.
+          </p>
+          <br>
+          <h5>Languages</h5>
+          <p>This are the languages i am conversant with:
+          </p>
+          <p>Javascript,React Framework, Angular Framework, Html, Scss, Css, Typescript</p>
+        </section>
+      </div>
+    </div>
+  </div>
+</article>
 
-		<!-- Portfolio -->
-			<article id="portfolio" class="wrapper style3">
-				<div class="container">
-					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
-					</header>
-					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
-					</footer>
-				</div>
-			</article>
+<!-- Portfolio -->
+<article id="portfolio" class="wrapper style3">
+  <div class="container">
+    <header>
+      <h2>Here’s some stuff I made recently.</h2>
+      <p>Some of the personal projects i have worked on are:</p>
+    </header>
+    <div class="row">
+      <div class="col-4 col-6-medium col-12-small">
+        <article class="box style2">
+          <a href="https://heuristic-lovelace-ba850f.netlify.app/" target="_blank" rel="noopener noreferrer" class="image featured"><img src="../../assets//images/creditcard.png" alt="" /></a>
+          <h3><a href="https://heuristic-lovelace-ba850f.netlify.app/" target="_blank" rel="noopener noreferrer">Credit Card manipulations</a></h3>
+          <p>Its a credit card, that takes account name, account number, expiry date of the card, type of bank if visa or mastercard and the ccv.</p>
+          <p>Languages used:</p>
+          <p>Javascript, Html, Scss using React</p>
+        </article>
+      </div>
+      <div class="col-4 col-6-medium col-12-small">
+        <article class="box style2">
+          <a href="https://nanasweb.netlify.app/" target="_blank" rel="noopener noreferrer" class="image featured"><img src="../../assets/images/ecommerce.png" alt="" /></a>
+          <h3><a href="https://nanasweb.netlify.app/" target="_blank" rel="noopener noreferrer">Ecommerce website</a></h3>
+          <p>Its an ecommerce website, items can be added to cart, shows carousel implementation,card's implementation, navbar ....</p>
+          <p>Languages used:</p>
+          <p>Typescript, Html, Scss, Bootstrap Using Angular framework</p>
+        </article>
+      </div>
+      <div class="col-4 col-6-medium col-12-small">
+        <article class="box style2">
+          <a href="https://testyelpcamp.netlify.app/" target="_blank" rel="noopener noreferrer" class="image featured"><img src="../../assets/images/yelp.png" alt="" /></a>
+          <h3><a href="https://testyelpcamp.netlify.app/" target="_blank" rel="noopener noreferrer">Yelp Camp Test</a></h3>
+          <p>Yelp camp test implementation where it was to replicate the disgn mock ups given.</p>
+        </article>
+      </div>
+    </div>
+  </div>
+</article>
 
-		<!-- Contact -->
-			<article id="contact" class="wrapper style4">
-				<div class="container medium">
-					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
-					</header>
-					<div class="row">
-						<div class="col-12">
-							<form method="post" action="https://formspree.io/f/mayavlwb">
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-									</div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="col-12">
-							<hr />
-							<h3>Find me on ...</h3>
-							<ul class="social">
-								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-								<li><a href="https://www.linkedin.com/in/hazel-orlendo-794465b0/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<!-- <li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
+<!-- Contact -->
+<article id="contact" class="wrapper style4">
+  <div class="container medium">
+    <header>
+      <h2>Have me make stuff for you.</h2>
+      <p>Contact me Below.</p>
+    </header>
+    <div class="row">
+      <div class="col-12">
+        <form method="post" action="https://formspree.io/f/mayavlwb">
+          <div class="row">
+            <div class="col-6 col-12-small">
+              <input type="text" name="name" id="name" placeholder="Name" />
+            </div>
+            <div class="col-6 col-12-small">
+              <input type="text" name="email" id="email" placeholder="Email" />
+            </div>
+            <div class="col-12">
+              <input type="text" name="subject" id="subject" placeholder="Subject" />
+            </div>
+            <div class="col-12">
+              <textarea name="message" id="message" placeholder="Message"></textarea>
+            </div>
+            <div class="col-12">
+              <ul class="actions">
+                <li><input type="submit" value="Send Message" /></li>
+                <li><input type="reset" value="Clear Form" class="alt" /></li>
+              </ul>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="col-12">
+        <hr />
+        <h3>Find me on ...</h3>
+        <ul class="social">
+          <!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+          <!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+          <!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+          <li><a href="https://www.linkedin.com/in/hazel-orlendo-794465b0/" class="icon brands fa-linkedin-in"><span
+                class="label">LinkedIn</span></a></li>
+          <!-- <li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li> -->
-								<li><a href="https://github.com/HazelCindy" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							</ul>
-							<hr />
-						</div>
-					</div>
-					<footer>
-						<ul id="copyright">
-							<li>&copy;  All rights reserved.</li><li></li>
-						</ul>
-					</footer>
-				</div>
-			</article>
+          <li><a href="https://github.com/HazelCindy" class="icon brands fa-github"><span
+                class="label">Github</span></a></li>
+        </ul>
+        <hr />
+        <!-- <footer>
+          <ul id="copyright">
+            <li>&copy; All rights reserved.</li>
+            <li></li>
+          </ul>
+        </footer> -->
+      </div>
+    </div>
 
+  </div>
+</article>
