--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1610,7 +1610,7 @@ input, select, textarea {
 /* Section/Article */
 
 	section, article {
-		margin-bottom: 3em;
+		/* margin-bottom: 3em; */
 	}
 
 	section > :last-child,
@@ -1686,7 +1686,7 @@ input, select, textarea {
 		text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
 		overflow: hidden;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
-		background-color: #43B3E0;
+		background-color: #2b36d1;
 		padding: 1em 2.35em 1em 2.35em;
 		font-size: 1.1em;
 		max-width: 24em;
@@ -1987,19 +1987,22 @@ input, select, textarea {
 /* Wrappers */
 
 	.wrapper {
-		background-image: url("images/bg.png");
+		/* background-image: url("../../assets/images/old-brick-black-color-wall-260nw-1605128917.jpg"); */
 		box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.05), inset 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
 		padding: 8em 0 8em 0;
 		text-align: center;
+    height: 100vh;
+
 	}
 
 		.wrapper.style1 {
-			background-image: none;
-			background-color: #fff;
+      background-image: url("../../assets/images/pexels-photo-586744.jpeg");
+			background-color: rgb(77, 168, 211);
 		}
 
 		.wrapper.style2 {
-			background-color: #fafafa;
+      background-image: none;
+			background-color: #ffffff;
 			text-shadow: 1px 1px 0px #fff;
 		}
 
@@ -2009,7 +2012,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style4 {
-			background-color: #303030;
+			background-color: #171718;
 			color: #999;
 			text-shadow: -1px -1px 0px #181818;
 		}
@@ -2198,6 +2201,8 @@ input, select, textarea {
 			.wrapper {
 				padding: 5em 0 5em 0;
 				text-align: center;
+    height: 100vh;
+
 			}
 
 				.wrapper.style4 .row-special {
@@ -2383,6 +2388,8 @@ input, select, textarea {
 			.wrapper {
 				padding: 3em 0;
 				text-align: center;
+    height: 100vh;
+
 			}
 
 		/* Nav */
